@@ -7,31 +7,31 @@ Makefile.PL
 constants.pl.PL
 lib/AE.pm
 lib/AnyEvent.pm
-lib/AnyEvent/Intro.pod
-lib/AnyEvent/FAQ.pod
-lib/AnyEvent/Strict.pm
-lib/AnyEvent/Debug.pm
 lib/AnyEvent/DNS.pm
+lib/AnyEvent/Debug.pm
+lib/AnyEvent/FAQ.pod
+lib/AnyEvent/Handle.pm
+lib/AnyEvent/Impl/Cocoa.pm
+lib/AnyEvent/Impl/EV.pm
+lib/AnyEvent/Impl/Event.pm
+lib/AnyEvent/Impl/EventLib.pm
+lib/AnyEvent/Impl/FLTK2.pm
+lib/AnyEvent/Impl/Glib.pm
+lib/AnyEvent/Impl/IOAsync.pm
+lib/AnyEvent/Impl/Irssi.pm
+lib/AnyEvent/Impl/POE.pm
+lib/AnyEvent/Impl/Perl.pm
+lib/AnyEvent/Impl/Qt.pm
+lib/AnyEvent/Impl/Tk.pm
+lib/AnyEvent/Intro.pod
+lib/AnyEvent/Log.pm
+lib/AnyEvent/Loop.pm
+lib/AnyEvent/Socket.pm
+lib/AnyEvent/Strict.pm
+lib/AnyEvent/TLS.pm
 lib/AnyEvent/Util.pm
 lib/AnyEvent/Util/idna.pl
 lib/AnyEvent/Util/uts46data.pl
-lib/AnyEvent/TLS.pm
-lib/AnyEvent/Handle.pm
-lib/AnyEvent/Socket.pm
-lib/AnyEvent/Loop.pm
-lib/AnyEvent/Log.pm
-lib/AnyEvent/Impl/EV.pm
-lib/AnyEvent/Impl/Perl.pm
-lib/AnyEvent/Impl/Event.pm
-lib/AnyEvent/Impl/FLTK2.pm
-lib/AnyEvent/Impl/Glib.pm
-lib/AnyEvent/Impl/Tk.pm
-lib/AnyEvent/Impl/Qt.pm
-lib/AnyEvent/Impl/POE.pm
-lib/AnyEvent/Impl/EventLib.pm
-lib/AnyEvent/Impl/IOAsync.pm
-lib/AnyEvent/Impl/Irssi.pm
-lib/AnyEvent/Impl/Cocoa.pm
 
 t/00_load.t
 t/01_basic.t
